			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

10-Sep-2000
~~~~~~~~~~~
Deleting items first checks if it will affect the pinboard or panel. A
warning is displayed if so. Upgraded the query dialog (from ROX-Session).

09-Sep-2000
~~~~~~~~~~~
'Unique filer windows' option now has no effect while the spring open
feature is active (spotted by Andrew Booker). Also, when opening a new
window, the old window is destroyed and a new one created (rather than
reusing the old one). This ensures that the new window appears in the
right place.

When a drag from the pinboard or a filer window ends, the selection is
only cleared if the icon was selected by starting the drag. Thus, it now
works like the panels.

08-Sep-2000
~~~~~~~~~~~
New Close toolbar button (requested by Martin Ward).
Toolbar icons can be turned on and off from the Options box.
Removed the 'Mount' menu entry, since 'Shift Open' does it too.
Made the Shift Open menu text change depending on what is selected.
Bugfix: dragging icons around no longer saved the new pinboard state!

07-Sep-2000
~~~~~~~~~~~
Running a second copy of the filer as another user will start a new copy
instead of reusing the existing one. Added the '-u' option to display the
name of the user running the filer in each window (also suppresses the
normal don't-run-as-root warning).

Added '-d', which opens a directory as a directory, even if it looks like
an application.

Updated the manual.

Added Large and Small toolbar buttons. Right-clicking brings up a menu.

06-Sep-2000
~~~~~~~~~~~
Moved 'Set Run Action' to the file menu (suggested by Ewan Mac Mahon), and
make using it bring up a dialog rather than a minibuffer. Hopefully it is now
easier to use!

Added much improved icons for executables and for applications without icons
of their own (Victor Liu See-le).

Allow '/' on the pinboard and panel (text wasn't displayed - spotted by
Tim Rowledge).

Bugfix: auto-scrolling didn't always stop when a drag ended.