@@ -10,6 +10,8 @@ BUGS
 
 Ctrl-click-drag doesn't work as well as button-2-click drag.
 
+Clicking beyond the right-most columns doesn't work.
+
 
 FEATURES FOR 1.0
 
