@@ -2,6 +2,12 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+11-Sep-2000
+~~~~~~~~~~~
+Allowed items in the far right column to spread right to the edge of the
+window. Fixed a bug which prevented Delete from working if there was
+no pinboard.
+
 10-Sep-2000
 ~~~~~~~~~~~
 Deleting items first checks if it will affect the pinboard or panel. A
